cbits/Bullet.h

void btCollisionWorld_ConvexResultCallback_m_collisionFilterGroup_set(void *c,short int a); //attribute: short int btCollisionWorld_ConvexResultCallback->m_collisionFilterGroup
short int btCollisionWorld_ConvexResultCallback_m_collisionFilterGroup_get(void *c); //attribute: short int btCollisionWorld_ConvexResultCallback->m_collisionFilterGroup
void btCollisionWorld_ConvexResultCallback_m_collisionFilterMask_set(void *c,short int a); //attribute: short int btCollisionWorld_ConvexResultCallback->m_collisionFilterMask
short int btCollisionWorld_ConvexResultCallback_m_collisionFilterMask_get(void *c); //attribute: short int btCollisionWorld_ConvexResultCallback->m_collisionFilterMask
void* btSphereSphereCollisionAlgorithm_CreateFunc_new(); //constructor: CreateFunc  ( ::btSphereSphereCollisionAlgorithm::CreateFunc::* )(  ) 
void btSphereSphereCollisionAlgorithm_CreateFunc_free(void *c);
 
void* btSphereSphereCollisionAlgorithm_CreateFunc_CreateCollisionAlgorithm(void *c,void* p0,void* p1,void* p2); //method: CreateCollisionAlgorithm ::btCollisionAlgorithm * ( ::btSphereSphereCollisionAlgorithm::CreateFunc::* )( ::btCollisionAlgorithmConstructionInfo &,::btCollisionObject *,::btCollisionObject * ) 
//not supported constructor: CreateFunc  ( ::btConvexConvexAlgorithm::CreateFunc::* )( ::btVoronoiSimplexSolver *,::btConvexPenetrationDepthSolver * ) 
// error: ::btVoronoiSimplexSolver * - ok,  - unsupported

void btConvexConvexAlgorithm_CreateFunc_free(void *c);
 
void* btConvexConvexAlgorithm_CreateFunc_CreateCollisionAlgorithm(void *c,void* p0,void* p1,void* p2); //method: CreateCollisionAlgorithm ::btCollisionAlgorithm * ( ::btConvexConvexAlgorithm::CreateFunc::* )( ::btCollisionAlgorithmConstructionInfo &,::btCollisionObject *,::btCollisionObject * ) 
// attribute not supported: //attribute: ::btConvexPenetrationDepthSolver * btConvexConvexAlgorithm_CreateFunc->m_pdSolver
void btConvexConvexAlgorithm_CreateFunc_m_simplexSolver_set(void *c,void* a); //attribute: ::btVoronoiSimplexSolver * btConvexConvexAlgorithm_CreateFunc->m_simplexSolver
void* btConvexConvexAlgorithm_CreateFunc_m_simplexSolver_get(void *c); //attribute: ::btVoronoiSimplexSolver * btConvexConvexAlgorithm_CreateFunc->m_simplexSolver
void btConvexConvexAlgorithm_CreateFunc_m_numPerturbationIterations_set(void *c,int a); //attribute: int btConvexConvexAlgorithm_CreateFunc->m_numPerturbationIterations
int btConvexConvexAlgorithm_CreateFunc_m_numPerturbationIterations_get(void *c); //attribute: int btConvexConvexAlgorithm_CreateFunc->m_numPerturbationIterations
void btConvexConvexAlgorithm_CreateFunc_m_minimumPointsPerturbationThreshold_set(void *c,int a); //attribute: int btConvexConvexAlgorithm_CreateFunc->m_minimumPointsPerturbationThreshold
int btConvexConvexAlgorithm_CreateFunc_m_minimumPointsPerturbationThreshold_get(void *c); //attribute: int btConvexConvexAlgorithm_CreateFunc->m_minimumPointsPerturbationThreshold
void* btCollisionWorld_LocalConvexResult_new(void* p0,void* p1,float* p2,float* p3,float p4); //constructor: LocalConvexResult  ( ::btCollisionWorld::LocalConvexResult::* )( ::btCollisionObject *,::btCollisionWorld::LocalShapeInfo *,::btVector3 const &,::btVector3 const &,::btScalar ) 
void btCollisionWorld_LocalConvexResult_free(void *c);
 
void btCollisionWorld_LocalConvexResult_m_hitCollisionObject_set(void *c,void* a); //attribute: ::btCollisionObject * btCollisionWorld_LocalConvexResult->m_hitCollisionObject
void* btCollisionWorld_LocalConvexResult_m_hitCollisionObject_get(void *c); //attribute: ::btCollisionObject * btCollisionWorld_LocalConvexResult->m_hitCollisionObject
void btCollisionWorld_LocalConvexResult_m_hitFraction_set(void *c,float a); //attribute: ::btScalar btCollisionWorld_LocalConvexResult->m_hitFraction
float btCollisionWorld_LocalConvexResult_m_hitFraction_get(void *c); //attribute: ::btScalar btCollisionWorld_LocalConvexResult->m_hitFraction
void btCollisionWorld_LocalConvexResult_m_hitNormalLocal_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_LocalConvexResult->m_hitNormalLocal
void btCollisionWorld_LocalConvexResult_m_hitNormalLocal_get(void *c,float* a);
void btCollisionWorld_LocalConvexResult_m_hitPointLocal_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_LocalConvexResult->m_hitPointLocal
void btCollisionWorld_LocalConvexResult_m_hitPointLocal_get(void *c,float* a);
void btCollisionWorld_LocalConvexResult_m_localShapeInfo_set(void *c,void* a); //attribute: ::btCollisionWorld::LocalShapeInfo * btCollisionWorld_LocalConvexResult->m_localShapeInfo
void* btCollisionWorld_LocalConvexResult_m_localShapeInfo_get(void *c); //attribute: ::btCollisionWorld::LocalShapeInfo * btCollisionWorld_LocalConvexResult->m_localShapeInfo