Physics/Bullet/Raw/BulletCollision/CollisionDispatch.chs

{#fun btCollisionWorld_ConvexResultCallback_m_collisionFilterGroup_set    `( BtCollisionWorld_ConvexResultCallbackClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#334>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ConvexResultCallback_m_collisionFilterGroup_get    `( BtCollisionWorld_ConvexResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#335>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ConvexResultCallback_m_collisionFilterMask_set    `( BtCollisionWorld_ConvexResultCallbackClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#335>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_ConvexResultCallback_m_collisionFilterMask_get    `( BtCollisionWorld_ConvexResultCallbackClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * CreateFunc
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h?r=2223#55>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp?r=2223>
-}
{#fun btSphereSphereCollisionAlgorithm_CreateFunc_new as btSphereSphereCollisionAlgorithm_CreateFunc    {  } -> `BtSphereSphereCollisionAlgorithm_CreateFunc' mkBtSphereSphereCollisionAlgorithm_CreateFunc* #}
{#fun btSphereSphereCollisionAlgorithm_CreateFunc_free    `( BtSphereSphereCollisionAlgorithm_CreateFuncClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h?r=2223#56>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.cpp?r=2223>
-}
{#fun btSphereSphereCollisionAlgorithm_CreateFunc_CreateCollisionAlgorithm as btSphereSphereCollisionAlgorithm_CreateFunc_CreateCollisionAlgorithm    `( BtSphereSphereCollisionAlgorithm_CreateFuncClass bc , BtCollisionAlgorithmConstructionInfoClass p0 , BtCollisionObjectClass p1 , BtCollisionObjectClass p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ ci
, withBt* `p1'  -- ^ body0
, withBt* `p2'  -- ^ body1
 } ->  `BtCollisionAlgorithm'  mkBtCollisionAlgorithm* #}
-- * CreateFunc
{#fun btConvexConvexAlgorithm_CreateFunc_free    `( BtConvexConvexAlgorithm_CreateFuncClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h?r=2223#99>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp?r=2223>
-}
{#fun btConvexConvexAlgorithm_CreateFunc_CreateCollisionAlgorithm as btConvexConvexAlgorithm_CreateFunc_CreateCollisionAlgorithm    `( BtConvexConvexAlgorithm_CreateFuncClass bc , BtCollisionAlgorithmConstructionInfoClass p0 , BtCollisionObjectClass p1 , BtCollisionObjectClass p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ ci
, withBt* `p1'  -- ^ body0
, withBt* `p2'  -- ^ body1
 } ->  `BtCollisionAlgorithm'  mkBtCollisionAlgorithm* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h?r=2223#91>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp?r=2223>
-}
{#fun btConvexConvexAlgorithm_CreateFunc_m_simplexSolver_set    `( BtConvexConvexAlgorithm_CreateFuncClass bc , BtVoronoiSimplexSolverClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h?r=2223#91>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp?r=2223>
-}
{#fun btConvexConvexAlgorithm_CreateFunc_m_simplexSolver_get    `( BtConvexConvexAlgorithm_CreateFuncClass bc )' =>     { withBt* `bc'  } ->  `BtVoronoiSimplexSolver'  mkBtVoronoiSimplexSolver* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h?r=2223#92>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp?r=2223>
-}
{#fun btConvexConvexAlgorithm_CreateFunc_m_numPerturbationIterations_set    `( BtConvexConvexAlgorithm_CreateFuncClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h?r=2223#92>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp?r=2223>
-}
{#fun btConvexConvexAlgorithm_CreateFunc_m_numPerturbationIterations_get    `( BtConvexConvexAlgorithm_CreateFuncClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h?r=2223#93>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp?r=2223>
-}
{#fun btConvexConvexAlgorithm_CreateFunc_m_minimumPointsPerturbationThreshold_set    `( BtConvexConvexAlgorithm_CreateFuncClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h?r=2223#93>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.cpp?r=2223>
-}
{#fun btConvexConvexAlgorithm_CreateFunc_m_minimumPointsPerturbationThreshold_get    `( BtConvexConvexAlgorithm_CreateFuncClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * LocalConvexResult
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#314>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_new as btCollisionWorld_LocalConvexResult    `( BtCollisionObjectClass p0 , BtCollisionWorld_LocalShapeInfoClass p1 )' =>     {  withBt* `p0' , withBt* `p1' , withVec3* `Vec3' , withVec3* `Vec3' ,  `Float'  } -> `BtCollisionWorld_LocalConvexResult' mkBtCollisionWorld_LocalConvexResult* #}
{#fun btCollisionWorld_LocalConvexResult_free    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#323>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_hitCollisionObject_set    `( BtCollisionWorld_LocalConvexResultClass bc , BtCollisionObjectClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#323>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_hitCollisionObject_get    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc'  } ->  `BtCollisionObject'  mkBtCollisionObject* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_hitFraction_set    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_hitFraction_get    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#325>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_hitNormalLocal_set    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#325>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_hitNormalLocal_get    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#326>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_hitPointLocal_set    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#326>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_hitPointLocal_get    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#324>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_localShapeInfo_set    `( BtCollisionWorld_LocalConvexResultClass bc , BtCollisionWorld_LocalShapeInfoClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#324>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
{#fun btCollisionWorld_LocalConvexResult_m_localShapeInfo_get    `( BtCollisionWorld_LocalConvexResultClass bc )' =>     { withBt* `bc'  } ->  `BtCollisionWorld_LocalShapeInfo'  mkBtCollisionWorld_LocalShapeInfo* #}
-- * LocalRayResult
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.h?r=2223#179>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionWorld.cpp?r=2223>
-}
